# CS205-project

./: .gitignore  .travis.yml  205time.txt  README.md  applications.html  conclusion.html  design.html  index.html  performance.html
DeepFlow_parallel/: .gitignore  CMakeLists.txt  TIME  compile_acc.sh  deepflow2_acc.c  deepflow2_mpi.c  deepflow2_rbsor.c  gmon.out  test_acc.sh  test_mpi.sh  test_mpi_no_match.sh  test_omp.sh  test_ori.sh  test_rbsor.sh
DeepFlow_parallel/gprof_results/: omp_ori.stats  ori.stats
DeepFlow_parallel/samples/: 1.ppm  2.ppm  backward.match  correct_omp_vis.ppm  forward.match  ori_correct_vis.ppm
DeepFlow_parallel/src/: image.c  opticalflow.c  opticalflow_aux.c  solver.c
DeepFlow_parallel/src_acc/: acc.h  image_acc.c  opticalflow_acc.c  opticalflow_aux_acc.c  solver_acc.c  solver_acc.h
DeepFlow_parallel/src_mpi/: image_mpi.c  mpi.h  opticalflow_aux_mpi.c  opticalflow_aux_mpi.h  opticalflow_mpi.c  opticalflow_mpi.h  solver_mpi.c  solver_mpi.h
DeepFlow_parallel/src_omp/: image_omp.c  omp.h  opticalflow_aux_omp.c  opticalflow_omp.c  opticalflow_omp.h  solver_omp.c  solver_omp.h
DeepFlow_parallel/src_rbsor/: image_rbsor.c  io_rbsor.c  io_rbsor.h  opticalflow_aux_rbsor.c  opticalflow_aux_rbsor.h  opticalflow_rbsor.c  opticalflow_rbsor.h  solver_rbsor.c  solver_rbsor.h
DeepFlow_release2.0/: Makefile
FlowGenerator/: a.c  compile command  flowRW_sV.h  flowSourceOpenCV_sV.cpp  for40  generator  out.flo  run.sh
Website_material/: Introduction_part_text_material.docx
application/: README.md  slowmo_guide.md  stylize_guide.md
original/: README
result/: README.md
result/serial/: fbunny360.txt  fbunny720.txt  fnyc1080.txt
results/: README.md
slides/: cs205_poster.ppt
src/: README.md
src/Jacobi_ACC/: compile_acc.sh
src/Jacobi_ACC/src_acc/: image_acc.c  opticalflow_acc.c  opticalflow_acc.h  opticalflow_aux_acc.c  opticalflow_aux_acc.h  solver_acc.c  solver_acc.h
src/Jacobi_ACC/src_common/: malloc_impl.c
src/Jacobi_OMP/: CMakeLists.txt  README  deepflow2.c
src/Jacobi_OMP/src/: image_omp.c  io_omp.c  io_omp.h  opticalflow_aux_omp.c  opticalflow_aux_omp.h  opticalflow_omp.c  solver_omp.c  solver_omp.h
src/Jacobi_serial/: README
src/Jacobi_serial/src/: io.c  opticalflow.c  solver.c  solver.h
src/MapReduce/: .gitignore  README.md  README.txt  file_get.py  file_submit.py  input_generator.py  mapper.py  reducer.py  scp.sh  setup_master_cmake.sh
src/RBSOR_ACC/: compile_acc.sh
src/RBSOR_ACC/src_acc/: io.c  io.h  opticalflow_acc.c  solver_acc.c  solver_acc.h
src/RBSOR_MPI/: README  compile_mpi.sh  deepflow2_mpi.c  video_flow.sh
src/RBSOR_MPI/src/: solver.c
src/RBSOR_MPI_OMP/: README  compile_mpi.sh  compile_mpi_omp.sh
src/RBSOR_MPI_OMP/src/: malloc.h  opticalflow.c  solver.c  solver.h
src/RBSOR_OMP/: CMakeLists.txt  README
src/RBSOR_OMP/src/: solver.c
src/RBSOR_serial/: CMakeLists.txt  README  deepflow2.c  video_flow.sh
src/RBSOR_serial/src/: opticalflow_aux.c  solver.c
src/SOR_serial/: README
src/SOR_serial/src/: image.c  opticalflow.c  solver.c  solver.h
src/SOR_serial_optimized_(original_implementation)/: CMakeLists.txt  README  video_flow.sh
src/SOR_serial_optimized_(original_implementation)/src/: solver.c
tools/: deepmatching-video.sh
tools/flo2svflow/: Makefile  README.md  main.cpp  run.sh
tools/flo2vflow/: Makefile  run.sh
tools/flo_visualization/: README.txt
